test/visibility/except/exceptWrongSymbol.good
exceptWrongSymbol.chpl:8: error: 'q' undeclared (first use this function)
